--- a/gmall-user-service/src/main/resources/application.properties
+++ b/gmall-user-service/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.dubbo.registry.address=192.168.0.99
 spring.dubbo.application.name=gmall-user-service
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.base-package=com.atguigu.gmall
+spring.dubbo.provider.host=user.gmall.com
