--- a/gmall-order-service/src/main/resources/application.properties
+++ b/gmall-order-service/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.redis.host=192.168.0.99
 spring.redis.port=6379
 spring.redis.database=0
 spring.elasticsearch.jest.uris=http://192.168.0.99:9200
+
+# mq
+spring.activemq.broker-url=tcp://localhost:61616
+activemq.listener.enable=true
