--- a/gmall-manager-service/src/main/resources/application.properties
+++ b/gmall-manager-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.root=info
 spring.datasource.url=jdbc:mysql://localhost:3306/gmall_study?characterBncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
-#mybatis\u7684\u626B\u63CF
+#mybatis
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 # dubbo
