--- a/gmall-payment/src/main/resources/application.properties
+++ b/gmall-payment/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8070
+server.port=8088
 logging.level.root=info
-# mysql
+#mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/gmall_study?characterBncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
@@ -10,9 +10,17 @@ mybatis.configuration.map-underscore-to-camel-case=true
 # dubbo
 spring.dubbo.registry.protocol=zookeeper
 spring.dubbo.registry.address=192.168.0.99
-spring.dubbo.application.name=gmall-user-service
+spring.dubbo.application.name=gmall-payment
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.base-package=com.atguigu.gmall
+# redis
+spring.redis.host=192.168.0.99
+spring.redis.port=6379
+spring.redis.database=0
+spring.elasticsearch.jest.uris=http://192.168.0.99:9200
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=LEGACYHTML5
 
 # mq
 spring.activemq.broker-url=tcp://localhost:61616
