--- a/gmall-manager-service/src/main/resources/application.properties
+++ b/gmall-manager-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8071
 logging.level.root=info
 #mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/gmall_study?characterBncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/gmall_study?characterBncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=root
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 mybatis.configuration.map-underscore-to-camel-case=true
