--- a/gmall-manager-web/src/main/resources/application.properties
+++ b/gmall-manager-web/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 logging.level.root=info
-# dubbo\u7684\u626B\u63CF
+# dubbo
 spring.dubbo.registry.protocol=zookeeper
 spring.dubbo.registry.address=192.168.0.99
 spring.dubbo.application.name=gmall-manager-web
