--- a/gmall-payment/pom.xml
+++ b/gmall-payment/pom.xml
@@ -19,6 +19,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.github.wxpay</groupId>
+            <artifactId>wxpay-sdk</artifactId>
+            <version>0.0.3</version>
+        </dependency>
+
         <dependency>
             <groupId>com.atguigu.gmall</groupId>
             <artifactId>gmall-api</artifactId>
