--- a/gmall-seckill/src/main/resources/application.properties
+++ b/gmall-seckill/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 server.port=8090
 logging.level.root=info
-# \u6570\u636E\u6E90\u8FDE\u63A5
+# mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/gmall_study?characterBncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
-#mybatis\u7684\u626B\u63CF
+#mybatis
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 mybatis.configuration.map-underscore-to-camel-case=true
-# dubbo\u7684\u626B\u63CF
+# dubbo
 spring.dubbo.registry.protocol=zookeeper
-spring.dubbo.registry.address=192.168.147.110
+spring.dubbo.registry.address=192.168.0.99
 spring.dubbo.application.name=gmall-seckill
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.base-package=com.atguigu.gmall
-# redis\u7F13\u5B58\u914D\u7F6E
-spring.redis.host=192.168.147.110
+# redis
+spring.redis.host=192.168.0.99
 spring.redis.port=6379
 spring.redis.database=0
 
